--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.1.1",
     "axios": "^1.2.2",
     "date-fns": "^2.29.3",
+    "nanoid": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
